# distributed-training-lab

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
configs/: benchmark_config.yaml  ddp_config.yaml  ddp_resnet_cifar10.yaml  fsdp_config.yaml  fsdp_resnet_cifar10.yaml
docs/: ARCHITECTURE.md  FEATURES.md  PERFORMANCE.md  TROUBLESHOOTING.md
examples/: notes_ddp_vs_fsdp.md  quick_start.md
scripts/: benchmark.py  run_ddp_single_node.sh  run_fsdp_single_node.sh  train_ddp.py  train_fsdp.py
src/: __init__.py  benchmark_runner.py  data.py  ddp_train.py  fsdp_train.py  models.py  utils.py
src/benchmark/: __init__.py  communication.py  metrics.py  profiler.py
src/models/: __init__.py  simple_model.py
src/training/: __init__.py  base_trainer.py  ddp_trainer.py  fsdp_trainer.py
src/utils/: __init__.py  config.py  logging.py  validation.py
tests/: __init__.py  test_trainers.py
